@@ -1,7 +1,7 @@
 package com.example.playerdatasync.api;
 
 import com.example.playerdatasync.utils.SchedulerUtils;
-import org.bukkit.Bukkit;
+import com.example.playerdatasync.managers.MessageManager;
 import org.bukkit.plugin.java.JavaPlugin;
 
 import com.google.gson.JsonObject;
@@ -11,20 +11,20 @@ import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
-
-import com.example.playerdatasync.managers.MessageManager;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 /**
  * Update checker for PlayerDataSync using CraftingStudio Pro API
  * API Documentation: https://www.craftingstudiopro.de/docs/api
  */
 public class UpdateChecker {
+
     private static final String API_BASE_URL = "https://craftingstudiopro.de/api";
     private static final String PLUGIN_SLUG = "playerdatasync";
-    
+    private static final Pattern VERSION_TOKEN_PATTERN = Pattern.compile("(\\d+)");
+
     private final JavaPlugin plugin;
     private final MessageManager messageManager;
 
@@ -34,38 +34,31 @@ public class UpdateChecker {
     }
 
     public void check() {
-        // Only check for updates if enabled in config
         if (!plugin.getConfig().getBoolean("update_checker.enabled", true)) {
             plugin.getLogger().info(messageManager.get("update_check_disabled"));
             return;
         }
-        
+
         SchedulerUtils.runTaskAsync(plugin, () -> {
+            HttpURLConnection connection = null;
             try {
-                // Use CraftingStudio Pro API endpoint
                 String apiUrl = API_BASE_URL + "/plugins/" + PLUGIN_SLUG + "/latest";
-                HttpURLConnection connection;
-                try {
-                    URI uri = new URI(apiUrl);
-                    connection = (HttpURLConnection) uri.toURL().openConnection();
-                } catch (URISyntaxException e) {
-                    // Fallback to deprecated constructor if URI parsing fails
-                    @SuppressWarnings("deprecation")
-                    URL fallbackUrl = new URL(apiUrl);
-                    connection = (HttpURLConnection) fallbackUrl.openConnection();
-                }
-                connection.setConnectTimeout(10000);
-                connection.setReadTimeout(10000);
+                connection = (HttpURLConnection) new URI(apiUrl).toURL().openConnection();
+
+                int timeout = Math.max(1000, plugin.getConfig().getInt("update_checker.timeout", 10000));
+                connection.setConnectTimeout(timeout);
+                connection.setReadTimeout(timeout);
                 connection.setRequestMethod("GET");
                 connection.setRequestProperty("User-Agent", "PlayerDataSync/" + plugin.getDescription().getVersion());
                 connection.setRequestProperty("Accept", "application/json");
 
                 int responseCode = connection.getResponseCode();
+
                 if (responseCode == 429) {
                     plugin.getLogger().warning(messageManager.get("update_check_failed", "Rate limit exceeded. Please try again later."));
                     return;
                 }
-                
+
                 if (responseCode != 200) {
                     plugin.getLogger().warning(messageManager.get("update_check_failed", "HTTP " + responseCode));
                     return;
@@ -73,57 +66,16 @@ public class UpdateChecker {
 
                 try (BufferedReader reader = new BufferedReader(
                         new InputStreamReader(connection.getInputStream(), StandardCharsets.UTF_8))) {
-                    
+
                     StringBuilder response = new StringBuilder();
                     String line;
                     while ((line = reader.readLine()) != null) {
                         response.append(line);
                     }
-                    
-                    String jsonResponse = response.toString();
-                    if (jsonResponse == null || jsonResponse.trim().isEmpty()) {
-                        plugin.getLogger().warning(messageManager.get("update_check_failed", "Empty response"));
-                        return;
-                    }
-                    
-                    // Parse JSON response using Gson
-                    // Response format: { version: string, downloadUrl: string, createdAt: string | null, 
-                    //                   title: string, releaseType: "release", slug: string | null, 
-                    //                   pluginTitle: string, pluginSlug: string }
-                    JsonObject jsonObject;
-                    try {
-                        jsonObject = JsonParser.parseString(jsonResponse).getAsJsonObject();
-                    } catch (Exception e) {
-                        plugin.getLogger().warning(messageManager.get("update_check_failed", "Invalid JSON response: " + e.getMessage()));
-                        return;
-                    }
-                    
-                    if (!jsonObject.has("version")) {
-                        plugin.getLogger().warning(messageManager.get("update_check_failed", "Invalid response format: missing version field"));
-                        return;
-                    }
-                    
-                    String latestVersion = jsonObject.get("version").getAsString();
-                    String downloadUrl = null;
-                    if (jsonObject.has("downloadUrl") && !jsonObject.get("downloadUrl").isJsonNull()) {
-                        downloadUrl = jsonObject.get("downloadUrl").getAsString();
-                    }
-                    
-                    String currentVersion = plugin.getDescription().getVersion();
-                    if (currentVersion.equalsIgnoreCase(latestVersion)) {
-                        if (plugin.getConfig().getBoolean("update_checker.notify_ops", true)) {
-                            plugin.getLogger().info(messageManager.get("update_current"));
-                        }
-                    } else {
-                        plugin.getLogger().info(messageManager.get("update_available", latestVersion));
-                        if (downloadUrl != null && !downloadUrl.isEmpty()) {
-                            plugin.getLogger().info(messageManager.get("update_download_url", downloadUrl));
-                        } else {
-                            plugin.getLogger().info(messageManager.get("update_download_url", 
-                                "https://craftingstudiopro.de/plugins/" + PLUGIN_SLUG));
-                        }
-                    }
+
+                    handleResponse(response.toString());
                 }
+
             } catch (java.net.UnknownHostException e) {
                 plugin.getLogger().fine(messageManager.get("update_check_no_internet"));
             } catch (java.net.SocketTimeoutException e) {
@@ -131,7 +83,96 @@ public class UpdateChecker {
             } catch (Exception e) {
                 plugin.getLogger().warning(messageManager.get("update_check_failed", e.getMessage()));
                 plugin.getLogger().log(java.util.logging.Level.FINE, "Update check error", e);
+            } finally {
+                if (connection != null) {
+                    connection.disconnect();
+                }
             }
         });
+    }
+
+    private void handleResponse(String jsonResponse) {
+        if (jsonResponse == null || jsonResponse.trim().isEmpty()) {
+            plugin.getLogger().warning(messageManager.get("update_check_failed", "Empty response"));
+            return;
+        }
+
+        JsonObject jsonObject;
+        try {
+            jsonObject = JsonParser.parseString(jsonResponse).getAsJsonObject();
+        } catch (Exception e) {
+            plugin.getLogger().warning(messageManager.get("update_check_failed", "Invalid JSON response: " + e.getMessage()));
+            return;
+        }
+
+        if (!jsonObject.has("version")) {
+            plugin.getLogger().warning(messageManager.get("update_check_failed", "Invalid response format: missing version field"));
+            return;
+        }
+
+        String latestVersion = jsonObject.get("version").getAsString();
+        String downloadUrl = jsonObject.has("downloadUrl") && !jsonObject.get("downloadUrl").isJsonNull()
+                ? jsonObject.get("downloadUrl").getAsString()
+                : API_BASE_URL + "/plugins/" + PLUGIN_SLUG;
+
+        String currentVersion = plugin.getDescription().getVersion();
+
+        int comparison = compareVersions(currentVersion, latestVersion);
+
+        if (comparison >= 0) {
+            if (plugin.getConfig().getBoolean("update_checker.notify_ops", true)) {
+                plugin.getLogger().info(messageManager.get("update_current"));
+            }
+        } else {
+            plugin.getLogger().info(messageManager.get("update_available", latestVersion));
+            plugin.getLogger().info(messageManager.get("update_download_url", downloadUrl));
+        }
+    }
+
+    /**
+     * Compare two versions while gracefully handling suffixes like -RELEASE, -BETA, etc.
+     * @return < 0 if current < latest, 0 if equal, > 0 if current > latest
+     */
+    private int compareVersions(String currentVersion, String latestVersion) {
+        int[] currentParts = toVersionParts(currentVersion);
+        int[] latestParts = toVersionParts(latestVersion);
+
+        int max = Math.max(currentParts.length, latestParts.length);
+        for (int i = 0; i < max; i++) {
+            int currentPart = i < currentParts.length ? currentParts[i] : 0;
+            int latestPart = i < latestParts.length ? latestParts[i] : 0;
+
+            if (currentPart != latestPart) {
+                return currentPart - latestPart;
+            }
+        }
+
+        return 0;
+    }
+
+    private int[] toVersionParts(String version) {
+        if (version == null || version.trim().isEmpty()) {
+            return new int[] {0};
+        }
+
+        Matcher matcher = VERSION_TOKEN_PATTERN.matcher(version);
+        java.util.List<Integer> parts = new java.util.ArrayList<Integer>();
+        while (matcher.find()) {
+            try {
+                parts.add(Integer.parseInt(matcher.group(1)));
+            } catch (NumberFormatException ignored) {
+                // Ignore malformed numeric chunks and continue
+            }
+        }
+
+        if (parts.isEmpty()) {
+            return new int[] {0};
+        }
+
+        int[] result = new int[parts.size()];
+        for (int i = 0; i < parts.size(); i++) {
+            result[i] = parts.get(i);
+        }
+        return result;
     }
 }
